BP: Github workflow added
BP: boiler plate and isn't relevant to test requirements

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -16,6 +16,7 @@ AllCops:
     - node_modules/**/*
     - spec/rails_helper.rb
     - test/**/*
+    - vendor/bundle/**/*
 
 Metrics/BlockLength:
   Enabled: false
