--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@tailwindcss/forms": "^0.3.3",
     "autoprefixer": "^10.2.6",
     "postcss": "^8.3.5",
+    "stimulus": "^2.0.0",
     "tailwindcss": "^2.2.4",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
